--- a/package.json
+++ b/package.json
@@ -22,19 +22,20 @@
   },
   "homepage": "https://github.com/Austin618/CSC302-Assignments#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "body-parser": "^1.20.0",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "concurrently": "^7.4.0",
     "connect-mongo": "^4.6.0",
     "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^10.0.0",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.4",
-    "chai": "^4.3.6",
-    "chai-http": "^4.3.0",
-    "concurrently": "^7.4.0",
-    "mocha": "^10.0.0",
     "nodemon": "^2.0.20"
   }
 }
